Adding SALRS workspace as submodule for initial use

--- a/.gitmodules
+++ b/.gitmodules
@@ -15,3 +15,7 @@
 [submodule "src/dilithium"]
 	path = src/dilithium
 	url = https://github.com/josephnicholas/dilithium
+[submodule "src/crypto/salrs"]
+	path = src/crypto/salrs
+    url = git@github.com:josephnicholas/salrs.git
+    branch = develop
