Removing Dilithium references and adding some off SALRS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -197,7 +197,7 @@ if(NOT MANUAL_SUBMODULES)
     check_submodule(external/unbound)
     check_submodule(external/rapidjson)
     check_submodule(external/trezor-common)
-    check_submodule(src/dilithium)
+    check_submodule(src/crypto/salrs)
   endif()
 endif()
 
