SALRS crytp intial commit

--- a/src/crypto/CMakeLists.txt
+++ b/src/crypto/CMakeLists.txt
@@ -25,6 +25,7 @@
 # INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT,
 # STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF
 # THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+add_subdirectory(salrs)
 
 set(crypto_sources
   aesb.c
@@ -75,8 +76,6 @@ set(crypto_private_headers
   CryptonightR_JIT.h
   CryptonightR_template.h)
 
-include_directories(../dilithium)
-
 monero_private_headers(cncrypto
   ${crypto_private_headers})
 monero_add_library(cncrypto
@@ -85,7 +84,7 @@ monero_add_library(cncrypto
   ${crypto_private_headers})
 target_link_libraries(cncrypto
   PUBLIC
-dilithium
+    salrs
     epee
     ${Boost_SYSTEM_LIBRARY}
     ${SODIUM_LIBRARY}
